frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'
  12       | COMPLEX

  13  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | PrintCompStmt ';'
  34       | DoStmt ';'
  35       | ReturnStmt ';'
  36       | PrintStmt ';'
  37       | BreakStmt ';'
  38       | StmtBlock

  39  SimpleStmt : LValue '=' Expr
  40             | Call
  41             |

  42  Receiver : Expr '.'
  43           |

  44  LValue : Receiver IDENTIFIER
  45         | Expr '[' Expr ']'

  46  Call : Receiver IDENTIFIER '(' Actuals ')'

  47  Expr : LValue
  48       | Call
  49       | Constant
  50       | Expr '+' Expr
  51       | Expr '-' Expr
  52       | Expr '*' Expr
  53       | Expr '/' Expr
  54       | Expr '%' Expr
  55       | Expr EQUAL Expr
  56       | Expr NOT_EQUAL Expr
  57       | Expr '<' Expr
  58       | Expr '>' Expr
  59       | Expr LESS_EQUAL Expr
  60       | Expr GREATER_EQUAL Expr
  61       | Expr AND Expr
  62       | Expr OR Expr
  63       | '(' Expr ')'
  64       | '-' Expr
  65       | '!' Expr
  66       | '@' Expr
  67       | '$' Expr
  68       | '#' Expr
  69       | READ_INTEGER '(' ')'
  70       | READ_LINE '(' ')'
  71       | THIS
  72       | SUPER
  73       | NEW IDENTIFIER '(' ')'
  74       | NEW Type '[' Expr ']'
  75       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  76       | '(' CLASS IDENTIFIER ')' Expr
  77       | CASE '(' Expr ')' '{' CaseStmtList DefaultStmt '}'
  78       | DCOPY '(' Expr ')'
  79       | SCOPY '(' Expr ')'

  80  CaseStmtList : CaseStmtList CaseStmt
  81               |

  82  CaseStmt : Constant ':' Expr ';'

  83  DefaultStmt : DEFAULT ':' Expr ';'

  84  Constant : LITERAL
  85           | NULL

  86  Actuals : ExprList
  87          |

  88  ExprList : ExprList ',' Expr
  89           | Expr

  90  PrintCompStmt : PRINTCOMP '(' ExprList ')'

  91  DoStmt : DO DoBranch OD

  92  DoBranch : DoBranch DOOD DoSubStmt
  93           | DoSubStmt

  94  DoSubStmt : Expr ':' Stmt

  95  WhileStmt : WHILE '(' Expr ')' Stmt

  96  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  97  BreakStmt : BREAK

  98  IfStmt : IF '(' Expr ')' Stmt ElseClause

  99  ElseClause : ELSE Stmt
 100             |

 101  ReturnStmt : RETURN Expr
 102             | RETURN

 103  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 7
	'{'  reduce 15

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 17
	STATIC  shift 18
	'}'  shift 19
	.  error

	VariableDef  goto 20
	Variable  goto 21
	Type  goto 22
	FunctionDef  goto 23


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 24
	.  error


state 17
	Type : COMPLEX .  (12)

	.  reduce 12


state 18
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 17
	.  error

	Type  goto 25


state 19
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 20
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 21
	VariableDef : Variable . ';'  (4)

	';'  shift 26
	.  error


state 22
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 27
	'['  shift 28
	.  error


state 23
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 24
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 25
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 29
	'['  shift 28
	.  error


state 26
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 27
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 30
	';'  reduce 5


state 28
	Type : Type '[' . ']'  (11)

	']'  shift 31
	.  error


state 29
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 32
	.  error


state 30
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 35
	VariableList  goto 36


state 31
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 32
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 37
	VariableList  goto 36


state 33
	VariableList : Variable .  (22)

	.  reduce 22


state 34
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 38
	'['  shift 28
	.  error


state 35
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 39
	.  error


state 36
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 40
	')'  reduce 19


state 37
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 41
	.  error


state 38
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 39
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 42
	.  error

	StmtBlock  goto 43


state 40
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 17
	.  error

	Variable  goto 44
	Type  goto 34


state 41
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 42
	.  error

	StmtBlock  goto 45


state 42
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 46


state 43
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 44
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 45
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 46
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (41)
	Receiver : .  (43)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 17
	NULL  shift 47
	THIS  shift 48
	WHILE  shift 49
	FOR  shift 50
	SUPER  shift 51
	IF  shift 52
	RETURN  shift 53
	BREAK  shift 54
	NEW  shift 55
	PRINT  shift 56
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	CASE  shift 59
	DO  shift 60
	PRINTCOMP  shift 61
	SCOPY  shift 62
	DCOPY  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'#'  shift 68
	'$'  shift 69
	'!'  shift 70
	'('  shift 71
	'{'  shift 42
	'}'  shift 72
	IDENTIFIER  reduce 43
	';'  reduce 41

	VariableDef  goto 73
	Variable  goto 21
	Type  goto 34
	StmtBlock  goto 74
	Stmt  goto 75
	SimpleStmt  goto 76
	IfStmt  goto 77
	WhileStmt  goto 78
	ForStmt  goto 79
	PrintCompStmt  goto 80
	DoStmt  goto 81
	ReturnStmt  goto 82
	PrintStmt  goto 83
	BreakStmt  goto 84
	LValue  goto 85
	Expr  goto 86
	Call  goto 87
	Receiver  goto 88
	Constant  goto 89


state 47
	Constant : NULL .  (85)

	.  reduce 85


state 48
	Expr : THIS .  (71)

	.  reduce 71


state 49
	WhileStmt : WHILE . '(' Expr ')' Stmt  (95)

	'('  shift 90
	.  error


state 50
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (96)

	'('  shift 91
	.  error


state 51
	Expr : SUPER .  (72)

	.  reduce 72


state 52
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (98)

	'('  shift 92
	.  error


state 53
	ReturnStmt : RETURN . Expr  (101)
	ReturnStmt : RETURN .  (102)
	Receiver : .  (43)

	NULL  shift 47
	THIS  shift 48
	SUPER  shift 51
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	CASE  shift 59
	SCOPY  shift 62
	DCOPY  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'#'  shift 68
	'$'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43
	';'  reduce 102

	LValue  goto 93
	Expr  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 54
	BreakStmt : BREAK .  (97)

	.  reduce 97


state 55
	Expr : NEW . IDENTIFIER '(' ')'  (73)
	Expr : NEW . Type '[' Expr ']'  (74)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 17
	IDENTIFIER  shift 96
	.  error

	Type  goto 97


state 56
	PrintStmt : PRINT . '(' ExprList ')'  (103)

	'('  shift 98
	.  error


state 57
	Expr : READ_INTEGER . '(' ')'  (69)

	'('  shift 99
	.  error


state 58
	Expr : READ_LINE . '(' ')'  (70)

	'('  shift 100
	.  error


state 59
	Expr : CASE . '(' Expr ')' '{' CaseStmtList DefaultStmt '}'  (77)

	'('  shift 101
	.  error


state 60
	DoStmt : DO . DoBranch OD  (91)
	Receiver : .  (43)

	NULL  shift 47
	THIS  shift 48
	SUPER  shift 51
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	CASE  shift 59
	SCOPY  shift 62
	DCOPY  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'#'  shift 68
	'$'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 93
	Expr  goto 102
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89
	DoBranch  goto 103
	DoSubStmt  goto 104


state 61
	PrintCompStmt : PRINTCOMP . '(' ExprList ')'  (90)

	'('  shift 105
	.  error


state 62
	Expr : SCOPY . '(' Expr ')'  (79)

	'('  shift 106
	.  error


state 63
	Expr : DCOPY . '(' Expr ')'  (78)

	'('  shift 107
	.  error


state 64
	Constant : LITERAL .  (84)

	.  reduce 84


state 65
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (75)

	'('  shift 108
	.  error


state 66
	Expr : '-' . Expr  (64)
	Receiver : .  (43)

	NULL  shift 47
	THIS  shift 48
	SUPER  shift 51
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	CASE  shift 59
	SCOPY  shift 62
	DCOPY  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'#'  shift 68
	'$'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 93
	Expr  goto 109
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 67
	Expr : '@' . Expr  (66)
	Receiver : .  (43)

	NULL  shift 47
	THIS  shift 48
	SUPER  shift 51
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	CASE  shift 59
	SCOPY  shift 62
	DCOPY  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'#'  shift 68
	'$'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 93
	Expr  goto 110
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 68
	Expr : '#' . Expr  (68)
	Receiver : .  (43)

	NULL  shift 47
	THIS  shift 48
	SUPER  shift 51
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	CASE  shift 59
	SCOPY  shift 62
	DCOPY  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'#'  shift 68
	'$'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 93
	Expr  goto 111
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 69
	Expr : '$' . Expr  (67)
	Receiver : .  (43)

	NULL  shift 47
	THIS  shift 48
	SUPER  shift 51
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	CASE  shift 59
	SCOPY  shift 62
	DCOPY  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'@'  shift 67
	'#'  shift 68
	'$'  shift 69
	'!'  shift 70
	'('  shift 71
	IDENTIFIER  reduce 43

	LValue  goto 93
	Expr  goto 112
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 70
	Expr : '!' . Expr  (65)
	Receiver : .  (43)
